// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResourceEmpty - Snapshots > matches the empty snapshot 1`] = `
<div
  class="mx-auto w-full relative flex flex-col items-center justify-center gap-6 p-6"
  data-testid="container"
>
  <img
    alt=""
    aria-hidden="true"
    class="pointer-events-none object-contain object-center"
    data-nimg="fill"
    decoding="async"
    loading="lazy"
    sizes="100vw"
    src="/_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=3840&q=75"
    srcset="/_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=640&q=75 640w, /_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=750&q=75 750w, /_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=828&q=75 828w, /_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=3840&q=75 3840w"
    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
  />
  <div
    class="relative z-10 flex shrink-0 items-center justify-center rounded-full bg-brand/16 p-6"
    data-testid="container"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-search-x size-12 text-brand"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m13.5 8.5-5 5"
      />
      <path
        d="m8.5 8.5 5 5"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
      <path
        d="m21 21-4.3-4.3"
      />
    </svg>
  </div>
  <div
    class="relative z-10 flex w-full flex-col items-center justify-center"
    data-testid="container"
  >
    <h3
      class="text-2xl font-bold text-foreground pb-6 text-center leading-8"
      data-testid="typography"
    >
      No resources yet
    </h3>
    <p
      class="text-center text-base leading-6 font-medium text-secondary-foreground"
      data-testid="typography"
    >
      Resources tagged with this category will appear here.
    </p>
  </div>
</div>
`;

exports[`ResourceEmpty - Snapshots > matches the error snapshot 1`] = `
<div
  class="mx-auto w-full relative flex flex-col items-center justify-center gap-6 p-6"
  data-testid="container"
>
  <div
    class="relative z-10 flex shrink-0 items-center justify-center rounded-full bg-brand/16 p-6"
    data-testid="container"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-search-x size-12 text-brand"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m13.5 8.5-5 5"
      />
      <path
        d="m8.5 8.5 5 5"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
      <path
        d="m21 21-4.3-4.3"
      />
    </svg>
  </div>
  <div
    class="relative z-10 flex w-full flex-col items-center justify-center"
    data-testid="container"
  >
    <h3
      class="text-2xl font-bold text-foreground pb-6 text-center leading-8"
      data-testid="typography"
    >
      Unable to load resources
    </h3>
    <p
      class="text-center text-base leading-6 font-medium text-secondary-foreground"
      data-testid="typography"
    >
      The resource index is unavailable. Try again later.
    </p>
  </div>
</div>
`;

exports[`ResourceEmpty - Snapshots > matches the lookup snapshot 1`] = `
<div
  class="mx-auto w-full relative flex flex-col items-center justify-center gap-6 p-6"
  data-testid="container"
>
  <img
    alt=""
    aria-hidden="true"
    class="pointer-events-none object-contain object-center"
    data-nimg="fill"
    decoding="async"
    loading="lazy"
    sizes="100vw"
    src="/_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=3840&q=75"
    srcset="/_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=640&q=75 640w, /_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=750&q=75 750w, /_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=828&q=75 828w, /_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Ftagged-empty-state.webp&w=3840&q=75 3840w"
    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
  />
  <div
    class="relative z-10 flex shrink-0 items-center justify-center rounded-full bg-brand/16 p-6"
    data-testid="container"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-search-x size-12 text-brand"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m13.5 8.5-5 5"
      />
      <path
        d="m8.5 8.5 5 5"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
      <path
        d="m21 21-4.3-4.3"
      />
    </svg>
  </div>
  <div
    class="relative z-10 flex w-full flex-col items-center justify-center"
    data-testid="container"
  >
    <h3
      class="text-2xl font-bold text-foreground pb-6 text-center leading-8"
      data-testid="typography"
    >
      No tags yet for this link
    </h3>
    <p
      class="text-center text-base leading-6 font-medium text-secondary-foreground"
      data-testid="typography"
    >
      This link has not been tagged in the resource index.
    </p>
  </div>
</div>
`;
